<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemIndexActivity" >

    <Button
        android:id="@+id/itemIndex_bttnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NEW" />

    <Button
        android:id="@+id/itemIndex_bttnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list" />

    <Button
        android:id="@+id/itemIndex_bttnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close" />
    
</LinearLayout>
