<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemNewActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/new_edtxName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name" />

            <Switch
                android:id="@+id/new_swchDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <DatePicker
                android:id="@+id/new_dtpkDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:calendarViewShown="false" />

            <Button
                android:id="@+id/new_bttnUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create" />

            <Button
                android:id="@+id/new_bttnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>